--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
     - . .travis.bash --cmd before_install
     - eval "$(perl -Mlocal::lib=$HOME/perl_modules)"
     - . .travis.bash --cmd install
-    - cpanm File::Find::Object::Rule HTML::T5 IO::All Path::Tiny XML::Grammar::Screenplay
+    - cpanm File::Find::Object::Rule HTML::T5 IO::All Path::Tiny XML::Grammar::Vered
     - git clone https://github.com/shlomif/screenplays-common
 perl:
     - "5.26"
