Instruct the CI config file to inst missing deps.
Install missing dependencies that are required by the build or tests.

See:

* https://en.wikipedia.org/wiki/Travis_CI

* https://en.wikipedia.org/wiki/Continuous_integration .

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ addons:
             - cpanminus
             - dbtoepub
             - docbook-defguide
+            - docbook5-xml
             - docbook-xsl
+            - docbook-xsl-ns
             - libperl-dev
             - libxml-libxml-perl
             - libxml-libxslt-perl
